# water-level-play

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/water_level_play/defs/: resources.py
src/water_level_play/defs/assets/: plots.py  water_level.py
